CS_SBOX_20150209_01/Metadata/unpackaged/objects/Account.object
<CustomObject>
    <fields>
        <fullName>Won_Subscription_Opps_Count__c</fullName>
        <label>Won Subscription Opps Count</label>
        <summaryFilterItems>
            <field>Opportunity.StageName</field>
            <operation>equals</operation>
            <value>Closed Won</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Opportunity.RecordTypeId</field>
            <operation>equals</operation>
            <value>Renewals, New Biz</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Year_Founded__c</fullName>
        <description>Added by LM on 2/8/2013; From MS CRM</description>
        <label>Year Founded</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fw1__Active__c</fullName>
        <label>Active</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>fw1__CustomerPriority__c</fullName>
        <label>Customer Priority</label>
        <picklist>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>fw1__NumberofLocations__c</fullName>
        <label>Number of Locations</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fw1__SLAExpirationDate__c</fullName>
        <label>SLA Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>fw1__SLASerialNumber__c</fullName>
        <label>SLA Serial Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fw1__SLA__c</fullName>
        <label>SLA</label>
        <picklist>
            <picklistValues>
                <fullName>Gold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Silver</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Platinum</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bronze</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>fw1__UpsellOpportunity__c</fullName>
        <label>Upsell Opportunity</label>
        <picklist>
            <picklistValues>
                <fullName>Maybe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>iSell__OSKeyID__c</fullName>
        <description>The OSKeyID is OneSource’s unique company identifier. It is a required field and, in Salesforce Professional Edition, must be visible and available on page layouts for all users.</description>
        <externalId>true</externalId>
        <label>OSKeyID</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rrpu__Alert_Message__c</fullName>
        <description>This field is installed by Riptide Pop-up Alerts and is used in conjunction with the Pop-up Alert S-Control.</description>
        <inlineHelpText>If you enter text into this field the text will be displayed in a pop-up message whenever someone views this record.</inlineHelpText>
        <label>Alert Message</label>
        <type>TextArea</type>
    </fields>
    <listViews>
        <fullName>Agencies</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_CITY</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>Category__c</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Category__c</field>
            <operation>equals</operation>
            <value>Agency</value>
        </filters>
        <label>Agencies</label>
    </listViews>
    <listViews>
        <fullName>AllAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>Location__c</columns>
        <columns>PARENT_NAME</columns>
        <columns>Agency__c</columns>
        <columns>VIP_Client__c</columns>
        <columns>GP_Cust_ID__c</columns>
        <columns>CisionPoint_ID__c</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>ACCOUNT.CREATED_DATE</columns>
        <columns>ACCOUNT.ADDRESS1_CITY</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>Opportunity_Count__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Accounts</label>
    </listViews>
    <listViews>
        <fullName>Consumer_Accounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>Verified__c</columns>
        <columns>ACCOUNT.ADDRESS1_CITY</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>Category__c</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Category__c</field>
            <operation>equals</operation>
            <value>Consumer</value>
        </filters>
        <label>Consumer Accounts</label>
    </listViews>
    <listViews>
        <fullName>Last_Purchase_Date</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>Last_Purchase_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Last_Purchase_Date__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>Last Purchase Date</label>
    </listViews>
    <listViews>
        <fullName>On_Credit_Hold_Accounts</fullName>
        <booleanFilter>1 OR 2</booleanFilter>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>ACCOUNT.LAST_UPDATE</columns>
        <columns>Opportunity_Count__c</columns>
        <columns>AR_Rep__c</columns>
        <columns>rrpu__Alert_Message__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Credit_Hold__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>rrpu__Alert_Message__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>On Credit Hold Accounts</label>
    </listViews>
    <listViews>
        <fullName>VIP_Accounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>VIP_Client__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>VIP Accounts</label>
    </listViews>
    <listViews>
        <fullName>Verified_Accounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>GP_Cust_ID__c</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>Location__c</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>Opportunity_Count__c</columns>
        <columns>Invoice_Count__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Verified__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Verified Accounts</label>
    </listViews>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>BillingCountry_Enforce_Country_Code</fullName>
        <active>true</active>
        <errorConditionFormula>OR(
		NOT( LEN(BillingCountry) = 3),
		NOT( CONTAINS(&quot;ABW:AFG:AGO:AIA:ALA:ALB:AND:ARE:ARG:ARM:ASM:ATA:ATF:ATG:AUS:AUT:AZE:BDI:BEL:BEN:BES:BFA:BGD:BGR:BHR:BHS:BIH:BLM:BLR:BLZ:BMU:BOL:BRA:BRB:BRN:BTN:BVT:BWA:CAF:CAN:CCK:CHE:CHL:CHN:CIV:CMR:COD:COG:COK:COL:COM:CPV:CRI:CUB:CUW:CXR:CYM:CYP:CZE:DEU:DJI:DMA:DNK:DOM:DZA:ECU:EGY:ERI:ESH:ESP:EST:ETH:FIN:FJI:FLK:FRA:FRO:FSM:GAB:GBR:GEO:GGY:GHA:GIB:GIN:GLP:GMB:GNB:GNQ:GRC:GRD:GRL:GTM:GUF:GUM:GUY:HKG:HMD:HND:HRV:HTI:HUN:IDN:IMN:IND:IOT:IRL:IRN:IRQ:ISL:ISR:ITA:JAM:JEY:JOR:JPN:KAZ:KEN:KGZ:KHM:KIR:KNA:KOR:KWT:LAO:LBN:LBR:LBY:LCA:LIE:LKA:LSO:LTU:LUX:LVA:MAC:MAF:MAR:MCO:MDA:MDG:MDV:MEX:MHL:MKD:MLI:MLT:MMR:MNE:MNG:MNP:MOZ:MRT:MSR:MTQ:MUS:MWI:MYS:MYT:NAM:NCL:NER:NFK:NGA:NIC:NIU:NLD:NOR:NPL:NRU:NZL:OMN:PAK:PAN:PCN:PER:PHL:PLW:PNG:POL:PRI:PRK:PRT:PRY:PSE:PYF:QAT:REU:ROU:RUS:RWA:SAU:SDN:SEN:SGP:SGS:SHN:SJM:SLB:SLE:SLV:SMR:SOM:SPM:SRB:SSD:STP:SUR:SVK:SVN:SWE:SWZ:SXM:SYC:SYR:TCA:TCD:TGO:THA:TJK:TKL:TKM:TLS:TON:TTO:TUN:TUR:TUV:TWN:TZA:UGA:UKR:UMI:URY:USA:UZB:VAT:VCT:VEN:VGB:VIR:VNM:VUT:WLF:WSM:YEM:ZAF:ZMB:ZWE&quot;, BillingCountry) 		)
	)</errorConditionFormula>
        <errorDisplayField>BillingCountry</errorDisplayField>
        <errorMessage>Please enter the applicable 3-character country code. Common country codes are USA, CAN, GBR. Full reference: http://en.wikipedia.org/wiki/ISO_3166-1_alpha-3</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Billing_Address_Required_Fields</fullName>
        <active>false</active>
        <errorConditionFormula>OR(ISBLANK(BillingPostalCode), ISBLANK( BillingCity), ISBLANK( BillingCountry ), ISBLANK( BillingState))</errorConditionFormula>
        <errorDisplayField>BillingStreet</errorDisplayField>
        <errorMessage>Billing Address City, State, Zip/Postal Code, and Country are required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Billing_Country_ISO_Check</fullName>
        <active>false</active>
        <description>Billing Country should be 3 letter ISO code.</description>
        <errorConditionFormula>AND(
NOT(ISBLANK(BillingCountry)),
LEN(BillingCountry)&lt;&gt;3
)</errorConditionFormula>
        <errorMessage>The Billing Country needs to be the 3 letter ISO code.  (For example, USA for United States, CAN for Canada, GBR for the United Kingdom, SWE for Sweden).  Google for the correct code if you don&apos;t know it or chatter @SFDC Admin to ask for help.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Billing_State_Abbr_Check</fullName>
        <active>false</active>
        <description>Billing State should be abbreviated for USA and CAN</description>
        <errorConditionFormula>AND(
NOT(ISBLANK(BillingState)),
LEN(BillingState)&lt;&gt;2,
OR(BillingCountry=&apos;USA&apos;,BillingCountry=&apos;CAN&apos;)
)</errorConditionFormula>
        <errorMessage>The Billing State needs to be the 2 letter postal code for USA and CAN addresses.  Google for the correct code if you don&apos;t know it or chatter @SFDC Admin to ask for help.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Client_Services_Info_Exp_Date</fullName>
        <active>true</active>
        <description>A Client Services Info Expiration Date is required when leaving a Client Services Info Alert.</description>
        <errorConditionFormula>AND(
NOT(ISBLANK(Client_Services_Info__c)),
ISBLANK(Client_Services_Info_Exp_Date__c) 
)</errorConditionFormula>
        <errorMessage>A Client Services Info Expiration Date is required when leaving a Client Services Info Alert.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Collections_Info_Exp_Date</fullName>
        <active>true</active>
        <description>A Collections Info Expiration Date is required when leaving a Collections Info Alert.</description>
        <errorConditionFormula>AND(
NOT(ISBLANK(Collections_Info__c)),
ISBLANK(Collections_Info_Exp_Date__c) 
)</errorConditionFormula>
        <errorMessage>A Collections Info Expiration Date is required when leaving a Collections Info Alert.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Credit_Hold_Lock_Down</fullName>
        <active>false</active>
        <errorConditionFormula>AND(ISCHANGED(Credit_Hold__c), NOT($User.Alias=&quot;sadmi&quot;))</errorConditionFormula>
        <errorDisplayField>Credit_Hold__c</errorDisplayField>
        <errorMessage>All Credit Hold changes must be done in GP.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Customer_Lockdown</fullName>
        <active>true</active>
        <errorConditionFormula>AND 
( 
NOT(OR($Profile.Name = &quot;System Administrator&quot;, 
$Profile.Name = &quot;Billing&quot;, 
$Profile.Name = &quot;Contract Administration&quot;)), 
ISCHANGED(Name),
NOT(ISBLANK(GP_Cust_ID__c)) 
)</errorConditionFormula>
        <errorMessage>Please contact @Billing to make changes to the Account Name for this Account.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>DEACTVIATED_Phone_Number_Required</fullName>
        <active>false</active>
        <description>Created by LM on 9/11/2013 for Phase 2 rollout for Client Services</description>
        <errorConditionFormula>AND(Verified__c=TRUE, ISBLANK(Phone))</errorConditionFormula>
        <errorDisplayField>Phone</errorDisplayField>
        <errorMessage>Phone Number is required in order to make the Account Verified</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Early_Term_Fields</fullName>
        <active>true</active>
        <errorConditionFormula>AND(Early_Term__c=TRUE,
ISBLANK(Early_Term_Reason__c),
ISBLANK(Last_Early_Term_Date__c)
)</errorConditionFormula>
        <errorMessage>If you are marking this as an Early Term Account, you need to update the Last Early Term Date and include an Early Term Reason.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Extensions_Info_Exp_Date</fullName>
        <active>true</active>
        <description>An Extensions Info Expiration Date is required when leaving an Extensions Info Alert.</description>
        <errorConditionFormula>AND(
NOT(ISBLANK(Extensions_Info__c)),
ISBLANK(Extensions_Info_Exp_Date__c) 
)</errorConditionFormula>
        <errorMessage>An Extensions Info Expiration Date is required when leaving an Extensions Info Alert.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>GP_Cust_ID_Lockdown</fullName>
        <active>true</active>
        <description>Only a System Administrator can change a GP Cust Id.</description>
        <errorConditionFormula>AND 
( 
NOT($Profile.Name = &quot;System Administrator&quot;), 
ISCHANGED(GP_Cust_ID__c),
ISBLANK(PRIORVALUE(GP_Cust_ID__c))=FALSE
)</errorConditionFormula>
        <errorMessage>Only a System Administrator can change a GP Cust Id.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Name_Change_Lockdown</fullName>
        <active>true</active>
        <errorConditionFormula>AND 
( 
NOT(OR($Profile.Name = &quot;System Administrator&quot;, 
$Profile.Name = &quot;Billing&quot;)),  
ISCHANGED(Name),
NOT(ISBLANK(GP_Cust_ID__c))  
)</errorConditionFormula>
        <errorDisplayField>Name</errorDisplayField>
        <errorMessage>Please contact @Billing to make changes to the Account Name for this Account.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>New_Biz_Info_Exp_Date</fullName>
        <active>true</active>
        <description>A New Biz Info Expiration Date is required when leaving a New Biz Info Alert.</description>
        <errorConditionFormula>AND(
NOT(ISBLANK(New_Biz_Info__c)),
ISBLANK(New_Biz_Info_Exp_Date__c) 
)</errorConditionFormula>
        <errorMessage>A New Biz Info Expiration Date is required when leaving a New Biz Info Alert.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Renewal_Info_Exp_Date</fullName>
        <active>true</active>
        <description>A Renewal Info Expiration Date is required when leaving a Renewal Info Alert.</description>
        <errorConditionFormula>AND(
NOT(ISBLANK(Renewal_Info__c)),
ISBLANK(Renewal_Info_Exp_Date__c) 
)</errorConditionFormula>
        <errorMessage>A Renewal Info Expiration Date is required when leaving a Renewal Info Alert.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Required_Invoice_fields</fullName>
        <active>true</active>
        <description>Required Invoice fields are a pair. If one is filled out, the other must be, too.</description>
        <errorConditionFormula>OR(AND(NOT(ISBLANK(Required_Invoice_Contact_Email__c)), 
ISBLANK(Required_Invoice_Contact_Name__c)), 

AND(NOT(ISBLANK(Required_Invoice_Contact_Name__c)), 
ISBLANK(Required_Invoice_Contact_Email__c)))</errorConditionFormula>
        <errorDisplayField>Required_Invoice_Contact_Email__c</errorDisplayField>
        <errorMessage>If you are using the Required Invoice Contact fields, BOTH must be filled out.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ShippingCountry_Enforce_Country_Code</fullName>
        <active>true</active>
        <errorConditionFormula>OR( 

		NOT( LEN(ShippingCountry) = 3),
		NOT( CONTAINS(&quot;ABW:AFG:AGO:AIA:ALA:ALB:AND:ARE:ARG:ARM:ASM:ATA:ATF:ATG:AUS:AUT:AZE:BDI:BEL:BEN:BES:BFA:BGD:BGR:BHR:BHS:BIH:BLM:BLR:BLZ:BMU:BOL:BRA:BRB:BRN:BTN:BVT:BWA:CAF:CAN:CCK:CHE:CHL:CHN:CIV:CMR:COD:COG:COK:COL:COM:CPV:CRI:CUB:CUW:CXR:CYM:CYP:CZE:DEU:DJI:DMA:DNK:DOM:DZA:ECU:EGY:ERI:ESH:ESP:EST:ETH:FIN:FJI:FLK:FRA:FRO:FSM:GAB:GBR:GEO:GGY:GHA:GIB:GIN:GLP:GMB:GNB:GNQ:GRC:GRD:GRL:GTM:GUF:GUM:GUY:HKG:HMD:HND:HRV:HTI:HUN:IDN:IMN:IND:IOT:IRL:IRN:IRQ:ISL:ISR:ITA:JAM:JEY:JOR:JPN:KAZ:KEN:KGZ:KHM:KIR:KNA:KOR:KWT:LAO:LBN:LBR:LBY:LCA:LIE:LKA:LSO:LTU:LUX:LVA:MAC:MAF:MAR:MCO:MDA:MDG:MDV:MEX:MHL:MKD:MLI:MLT:MMR:MNE:MNG:MNP:MOZ:MRT:MSR:MTQ:MUS:MWI:MYS:MYT:NAM:NCL:NER:NFK:NGA:NIC:NIU:NLD:NOR:NPL:NRU:NZL:OMN:PAK:PAN:PCN:PER:PHL:PLW:PNG:POL:PRI:PRK:PRT:PRY:PSE:PYF:QAT:REU:ROU:RUS:RWA:SAU:SDN:SEN:SGP:SGS:SHN:SJM:SLB:SLE:SLV:SMR:SOM:SPM:SRB:SSD:STP:SUR:SVK:SVN:SWE:SWZ:SXM:SYC:SYR:TCA:TCD:TGO:THA:TJK:TKL:TKM:TLS:TON:TTO:TUN:TUR:TUV:TWN:TZA:UGA:UKR:UMI:URY:USA:UZB:VAT:VCT:VEN:VGB:VIR:VNM:VUT:WLF:WSM:YEM:ZAF:ZMB:ZWE&quot;, ShippingCountry ) 		)

)</errorConditionFormula>
        <errorDisplayField>ShippingCountry</errorDisplayField>
        <errorMessage>Please enter the applicable 3-character country code. Common country codes are USA, CAN, GBR. Full reference: http://en.wikipedia.org/wiki/ISO_3166-1_alpha-3</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Shipping_Country_ISO_Check</fullName>
        <active>false</active>
        <description>Shipping Country should be 3 letter ISO code.</description>
        <errorConditionFormula>AND(
NOT(ISBLANK(ShippingCountry)),
LEN(ShippingCountry)&lt;&gt;3
)</errorConditionFormula>
        <errorMessage>The Shipping Country needs to be the 3 letter ISO code.  (For example, USA for United States, CAN for Canada, GBR for the United Kingdom, SWE for Sweden).  Google for the correct code if you don&apos;t know it or chatter @SFDC Admin to ask for help.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Shipping_State_Abbr_Check</fullName>
        <active>false</active>
        <description>Shipping State should be abbreviated for USA and CAN</description>
        <errorConditionFormula>AND(
NOT(ISBLANK(ShippingState)),
LEN(ShippingState)&lt;&gt;2,
OR(ShippingCountry=&apos;USA&apos;,ShippingCountry=&apos;CAN&apos;)
)</errorConditionFormula>
        <errorMessage>The Shipping State needs to be the 2 letter postal code for USA and CAN addresses.  Google for the correct code if you don&apos;t know it or chatter @SFDC Admin to ask for help.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Verified_Address_Lockdown</fullName>
        <active>true</active>
        <errorConditionFormula>AND 
( 
NOT(OR($Profile.Name = &quot;System Administrator&quot;, 
$Profile.Name = &quot;Billing&quot;, 
$Profile.Name = &quot;Contract Administration&quot;)), 
OR(ISCHANGED( BillingStreet ), 
ISCHANGED( BillingCity ), 
ISCHANGED( BillingState ), 
ISCHANGED( BillingPostalCode ), 
ISCHANGED( BillingCountry ), 
ISCHANGED( ShippingStreet ), 
ISCHANGED( ShippingCity ), 
ISCHANGED( ShippingState ), 
ISCHANGED( ShippingPostalCode ), 
ISCHANGED( ShippingCountry )),
Verified__c =TRUE 
)</errorConditionFormula>
        <errorMessage>Please contact @Billing to make changes to the Addresses for this Account.</errorMessage>
    </validationRules>
</CustomObject>